# meta-bot

./: .gitignore  Dockerfile  README.md  apply.py  config.yaml  docker-compose.yml  email_notifier.py  main.py  pyproject.toml  requirements.txt  task-definition.json
.github/workflows/: daily_run.yml
