[tool.poetry]
name         = "meta-cron-job"
version      = "0.1.0"
description  = ""
authors      = ["rushi1222 <57805541+rushi1222@users.noreply.github.com>"]
package-mode = false           # ← keep inside this block

[tool.poetry.dependencies]
python            = "^3.10"
selenium          = "4.33.0"
selenium-wire     = "5.1.0"
webdriver-manager = "4.0.2"
python-dotenv     = "1.1.0"
pyyaml            = "6.0.2"
blinker = "1.4"
urllib3 = "2.4.0"
websocket-client = "1.8.0"
requests = "2.32.3"
brotli = "1.1.0"
h2 = "4.2.0"
kaitaistruct = "0.10"
packaging = "25.0"
pyasn1 = "0.6.1"
pyopenssl = "25.1.0"
pyparsing = "3.2.3"
zstandard = "0.23.0"
setuptools = "^80.8.0"


[build-system]
requires      = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
